# tracer_cc_test

./: .gitignore  Dockerfile  README.md  deploy.sh  install.sh  pyproject.toml
tracercc/: __init__.py  api_client.py  cli.py  extractor.py  local_analyze.py  redact.py  render.py
tracercc/backend/: Dockerfile  __init__.py  analyze.py  cluster_full.py  clustering.py  embedding.py  main.py  mechanical.py  pricing.py  schema.py
tracercc/runtime/: __init__.py  router.py
tracercc/sources/: __init__.py  claude_code.py  cursor.py  custom.py
tracercc/templates/: dashboard.html.j2
