[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracercc"
version = "0.3.0"
description = "Open-core waste diagnostic for Claude Code, Cursor, and custom agents — local by default."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
authors = [{ name = "Adam Rida" }]
keywords = ["claude-code", "cursor", "llm", "cost-optimization", "tracer", "openai", "gemini"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]
# Core client: extract + redact + render + talk to a backend over HTTP.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24,<2.2",
    "requests>=2.31",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# [local] — in-process analysis, zero network, zero torch. Uses sklearn
# HashingVectorizer for embeddings (coarser than BGE-M3 but plenty for the
# structural gate) and sklearn HDBSCAN for clustering. ~15 MB of installs,
# 5s first-run latency.
local = [
    "pydantic>=2.7",
    "scikit-learn>=1.3",
]
# [embed] — upgrade the embedder from hashing to sentence-transformers MiniLM
# (384-dim, better cluster boundaries). Pulls torch + the HuggingFace stack
# — first run downloads ~500 MB of torch + 90 MB of model weights, cached
# under ~/.cache/huggingface. Run once, reuse forever.
embed = [
    "pydantic>=2.7",
    "scikit-learn>=1.3",
    "torch>=2.4",
    "sentence-transformers>=3.0",
]
# [serve] — [embed] + the FastAPI HTTP surface so you can self-host the
# reference backend (`tracercc serve`).
serve = [
    "pydantic>=2.7",
    "scikit-learn>=1.3",
    "torch>=2.4",
    "sentence-transformers>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
]
# [full] — [embed] + UMAP + HDBSCAN for the heavy clustering path. Pulls
# numba + llvmlite so expect longer install. Use for >1k mechanical turns.
full = [
    "pydantic>=2.7",
    "scikit-learn>=1.3",
    "torch>=2.4",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
]

[project.scripts]
tracercc = "tracercc.cli:main"

[project.urls]
Homepage = "https://github.com/adrida/tracer_cc_test"
Repository = "https://github.com/adrida/tracer_cc_test"

[tool.setuptools.packages.find]
include = ["tracercc*"]

[tool.setuptools.package-data]
tracercc = ["templates/*.html.j2", "templates/*.css"]
