[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracercc"
version = "0.3.0"
description = "Waste diagnostic for Claude Code, Cursor, and custom agents. Thin client — all analysis runs on the hosted backend."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
authors = [{ name = "Adam Rida" }]
keywords = ["claude-code", "cursor", "llm", "cost-optimization", "tracer", "openai", "gemini"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]
# Core client: extract + redact + render + talk to the hosted backend over HTTP.
# Deliberately light — all analysis happens server-side for speed + scale.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24,<2.2",
    "requests>=2.31",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# [serve] — minimum needed to self-host the reference backend. Hashing embedder
# fallback only (when Cloudflare Workers AI creds aren't set). Lean image —
# fast cold starts on Cloud Run. This is what the bundled Dockerfile installs.
serve = [
    "pydantic>=2.7",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
]
# [serve-full] — [serve] + torch + sentence-transformers, so the MiniLM
# embedder is available when Cloudflare creds aren't set. Adds ~700 MB to the
# container image. Only worth it if you self-host without Cloudflare.
serve-full = [
    "pydantic>=2.7",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "torch>=2.4",
    "sentence-transformers>=3.0",
]

[project.scripts]
tracercc = "tracercc.cli:main"

[project.urls]
Homepage = "https://github.com/adrida/tracer_cc_test"
Repository = "https://github.com/adrida/tracer_cc_test"

[tool.setuptools.packages.find]
include = ["tracercc*"]

[tool.setuptools.package-data]
tracercc = ["templates/*.html.j2", "templates/*.css"]
